--- a/resources/sass/_components.scss
+++ b/resources/sass/_components.scss
@@ -1,6 +1,7 @@
 .card-small {
   width: 30%;
   height: 12rem;
+  margin: 1rem auto;
 }
 
 .card-big {
@@ -68,7 +69,6 @@
   .card-small {
     width: 45%;
     height: 12rem;
-    margin: 1rem auto;
   }
 
   .card-big {
@@ -81,6 +81,5 @@
   .card-big {
     width: 80%;
     height: 11rem;
-    margin: 1rem auto;
   }
 }
